# Commodityapp01

./: .gitignore  AGENTS.md  CommodityOS_Colab.ipynb  README.txt  check_db.py  check_json.py  requirements.txt
commodity_agents/: main.py  pyproject.toml  requirements.txt
commodity_agents/agents/: base_agent.py  specialized_agents.py
commodity_agents/commodity_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
commodity_agents/config/: config.py  config.yaml
commodity_agents/consolidation/: consolidator.py
commodity_agents/coordinator/: coordinator.py
commodity_agents/models/: models.py
commodity_agents/orchestration/: orchestrator.py
commodity_agents/storage/: storage.py
commodity_os/: __init__.py  config.json  integration.py  main.py  pyproject.toml
commodity_os/core/: __init__.py  events.py  orchestrator.py
commodity_os/crawlers/: __init__.py  base.py  global_config.py  spider.py  spider_factory.py
commodity_os/dashboard/: __init__.py  generator.py
commodity_os/data/: checkpoint.json
commodity_os/data_pipeline/: pipeline.py
commodity_os/github_integration/: __init__.py  github.py
commodity_os/knowledge_graph/: __init__.py  graph.py
commodity_os/meta_agents/: __init__.py  executive_agent.py  orchestrator_agent.py  quality_agent.py
commodity_os/monitoring/: __init__.py  monitor.py
commodity_os/reports/: generator.py
commodity_os/testing/: __init__.py  tests.py
data/: commodity_data.db  knowledge_graph.json
docs/: dashboard.json  data.json  index.html
output/: all_entities.json  commodity_data_consolidated.json  (+3 more)
(+9 files in other folders)
