[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commodity-os"
version = "1.0.0"
description = "Automated Market Intelligence Operating System for Indian Commodity Data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
commodity-os = "commodity_os.main:main"
